--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -62,12 +62,12 @@
                     <legend>Query Options</legend>
                     <div class="checkbox-grid">
                         <div class="user-info-item">
-                            <label for="use_rag_database">Dialog: Use local RAG database</label>
+                            <label for="use_rag_database">Dialog: Use local RAG</label>
                             <input type="checkbox" id="use_rag_database" name="use_rag_database">
                         </div>
                         <div class="user-info-item">
-                            <label for="max-results">Search: Max Results</label>
-                            <input type="number" id="max-results" name="max-results" value="10">
+                            <label for="max_results">Search: Max Results</label>
+                            <input type="number" id="max_results" name="max_results" value="10">
                         </div>
                     </div> 
                 </fieldset>
@@ -137,7 +137,7 @@
                         <div class="link-submission">
                             <label for="link">Url link:</label>
                             <input type="url" id="link" name="link" placeholder="Enter the link to be indexed">
-                            <button type="button" id="submit-link-button" onclick="submitLink()">Submit Link</button>
+                            <button type="button" id="submit-link-button" onclick="submit_link()">Submit Link</button>
                         </div>
                     </fieldset>
                 </div>
